# starting-ragchatbot-codebase

./: .env.example  .flake8  CLAUDE.md  pyproject.toml  test-claude.md  test_sequential.py
.github/workflows/: ci.yml  claude-code.yml  claude-review.yml
backend/: ai_generator.py  app.py  config.py  document_processor.py  models.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api.py  test_course_search_tool.py  test_rag_sequential_integration.py  test_vector_store.py
docs/: query-flow-diagram.md
frontend/: index.html  script.js  style.css
scripts/: check.sh  format.sh  lint.sh
